# UniTrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile  app.py  render.yaml
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
mobile/: App.js  app.json  eas.json  package-lock.json  package.json
unitrack/: __init__.py
unitrack/cli/: __init__.py  main.py
unitrack/core/: __init__.py  calculator.py  config.py  discovery.py  scraper.py
unitrack/web/: __init__.py  server.py
